2011-02-13  Jarred Nicholls  <jarred@sencha.com>

Reviewed by Simon Fraser.

        getComputedStyle returns wrong value for margin-right
        https://bugs.webkit.org/show_bug.cgi?id=13343

        Matching IE, Firefox, and Opera behavior by returning the computed margin
        values as specified, rather than the used/auto values (calculated via RenderBox).
        Also CSS 2.1+ compliant by returning margin percentage as specified, if applicable.
        Note: Firefox and Opera return calculated fixed lengths for percentage margins, IE
        returns the specified percentage.

        * fast/css/getComputedStyle/computed-style-without-renderer-expected.txt:
        * platform/chromium-mac/fast/css/computed-style-without-renderer-expected.txt
        * platform/chromium-win/fast/css/computed-style-without-renderer-expected.txt
        * platform/chromium-win/fast/css/getComputedStyle/computed-style-without-renderer-expected.txt
        * platform/gtk/fast/css/getComputedStyle/computed-style-without-renderer-expected.txt
        * platform/mac/fast/css/getComputedStyle/computed-style-without-renderer-expected.txt
        * platform/qt/fast/css/getComputedStyle/computed-style-without-renderer-expected.txt
        * fast/css/getComputedStyle/getComputedStyle-margin-auto-expected.txt: Renamed from LayoutTests/fast/css/getComputedStyle/marginComputedStyle-expected.txt.
        * fast/css/getComputedStyle/getComputedStyle-margin-auto.html: Copied from LayoutTests/fast/css/getComputedStyle/marginComputedStyle.html.
        * fast/css/getComputedStyle/getComputedStyle-margin-length-expected.txt: Added.
        * fast/css/getComputedStyle/getComputedStyle-margin-length.html: Copied from LayoutTests/fast/css/getComputedStyle/marginComputedStyle.html.
        * fast/css/getComputedStyle/getComputedStyle-margin-percentage-expected.txt: Added.
        * fast/css/getComputedStyle/getComputedStyle-margin-percentage.html: Renamed from LayoutTests/fast/css/getComputedStyle/marginComputedStyle.html.
2011-02-13  Jarred Nicholls  <jarred@sencha.com>

        Reviewed by Simon Fraser.

        getComputedStyle returns wrong value for margin-right
        https://bugs.webkit.org/show_bug.cgi?id=13343

        Matching IE, Firefox, and Opera behavior by returning the computed margin
        values as specified, rather than the used/auto values (calculated via RenderBox).
        Also CSS 2.1+ compliant by returning margin percentage as specified, if applicable.
        Note: Firefox and Opera return calculated fixed lengths for percentage margins, IE
        returns the specified percentage.

        Tests: fast/css/getComputedStyle/getComputedStyle-margin-auto.html
               fast/css/getComputedStyle/getComputedStyle-margin-length.html
               fast/css/getComputedStyle/getComputedStyle-margin-percentage.html

        * css/CSSComputedStyleDeclaration.cpp:
        (WebCore::CSSComputedStyleDeclaration::getPropertyCSSValue):

Canonical link: https://commits.webkit.org/68439@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@78436 268f45cc-cd09-0410-ab3c-d52691b4dbfc